# malloc-intercept-demo

./: CMakeLists.txt  Makefile
include/: monitoring.h
src/: malloc_override.cc  monitoring.cc  program.cc
